--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.5",
+    "axios": "^1.7.7",
     "vue": "^3.5.10"
   },
   "devDependencies": {
